@@ -1,0 +1,24 @@
+kvt --- the KDE terminal emulation
+
+copyright (C) 1997 by Matthias Ettrich <ettrich@kde.org>
+
+based on rxvt-2.0.8 from Robert Nation which was based on
+xvt from John Bovey.
+
+All authored aggreed to distribute their code under the terms
+of the GPL (although the original licensing from John Bovey was
+a bit different):
+ 
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
